# recselfagg

./: LICENSE  README.md  pyproject.toml
src/recselfagg/: __init__.py  cli.py  rsa.py
